@@ -1,3 +1,11 @@
+2004-10-02  Alexander Gottwald  <ago at freedesktop dot org>
+
+	* winmouse.c (winMouseProc):
+	Make sure buttons 1-3 are mouse buttons and wheel events are 4-5
+	Document code
+	Replace ErrorF with appropriate winMsg
+	use a symbolic name for the wheel event offset
+	
 2004-10-01  Alexander Gottwald  <ago at freedesktop dot org>
 
 	* wincreatewnd.c (winCreateBoundingWindowWindowed):
